--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "prebuild": "shx rm -rf build",
     "tunnel": "lt --port 4000",
-    "start": "node build/init.js"
+    "start": "node build/init.js",
+    "prestart": "npm run build"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
