--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
     "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
-    "copyAll": "cp -r src/static build && cp -r src/views build",
+    "copyAll": "shx cp -r src/static build && shx cp -r src/views build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
-    "prebuild": "rm -rf build",
+    "prebuild": "shx rm -rf build",
     "tunnel": "lt --port 4000",
     "start": "PRODUCTION=true node build/init.js",
     "prestart": "npm run build"
